2005-12-18  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin and Geoffrey.

        - fix for <http://bugzilla.opendarwin.org/show_bug.cgi?id=4000>
        Object.prototype is missing isPrototypeOf
        
        * kjs/object_object.cpp:
        (ObjectPrototype::ObjectPrototype):
        Add isPrototypeOf to object prototype.
        
        (ObjectProtoFunc::callAsFunction):
        Implement isPrototypeOf
        
        * kjs/object_object.h:
        (KJS::ObjectProtoFunc::):
        Add id for isPrototypeOf.

2005-12-17  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin.

        Fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=6119
        split() function ignores case insensitive modifier.

        Glossary:
        RegExpImp: The C++ object you get when JavaScript executes
                   "new RegExp()".
        RegExp:    A C++ wrapper object that performs regular expression
                   matching on behalf of a RegExpImp.

        Instead of unnecessarily constructing a RegExp which (wrongly) lacks
        any modifiers, String.split() now uses the RegExp built in to the 
        RegExpImp passed to it, which has the right modifiers already.

        I also cleaned up other bits of the string code to standardized how
        we handle RegExpImp arguments.

        * ChangeLog:
        * kjs/string_object.cpp:
        (replace):
        (StringProtoFunc::callAsFunction):

2005-12-16  David Hyatt  <hyatt@apple.com>

	Remove unused RefPtr constructors that can create an ambiguity in ustring on some platforms.
	
        Reviewed by mjs

        * kxmlcore/RefPtr.h:
        (KXMLCore::RefPtr::RefPtr):

2005-12-15  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5688
          speed up JavaScript parsing by not creating a UString just to parse

        * kjs/internal.h: